Modifing some explanation in Q3

--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -665,7 +665,7 @@ head(happy_score)%>%kable(caption = 'A clean dataset with Happiness Score')%>%
   From **Figure \@ref(fig:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors is around 72.88%. For the four predictors, GDP with the highest value in four predictors contributed to around 65% for the happiness scores,indicating that GDP factor is the most important for happiness score and it is more likely to affect the change of happiness scores when the GDP variable change [@gromping2015variable]. On the other hand,by using **variance inflation factor** (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population variable is the highest one around at 3, indicating that there is a slight correlation of population with other variables in the model [@daoud2017multicollinearity].
 
 ## Scatter matrix
-  To analyze the relationship between different predictors, we use scatter matrix which can be visualized easily how much one variable is affected by another or the relationship between them. The **Figure \@ref(fig:scattermatrix)** compares all the predictors in the model and represents the relationship between these variables. If there is a strong positive linear correlation between two factors, we can say that if one factor is important in evaluating a country’s overall happiness, it is likely that the other factor is important as well. Based on the plots, it seems that the importance of GDP and area are strongly correlated, as well as population and area. Therefore,GDP is the most important factors for evaluating the happiness scores as it has the highest positive correlation with happiness score,but also for the developed countries in most of western area with highest GDP, the happiness scores will be higher than the development countries with lower GDP.
+  To analyze the relationship between different predictors, we use scatter matrix which can be visualized easily how much one variable is affected by another or the relationship between them. The **Figure \@ref(fig:scattermatrix)** compares all the predictors in the model and represents the relationship between these variables. If there is a strong positive linear correlation between two factors, we can say that if one factor is important in evaluating the happiness scores, it is likely that the other factor has contribute to it as well. Based on the figures, it seems that the importance of GDP and area are strongly correlated, as well as population and area. Therefore,GDP is the most important factors for evaluating the happiness scores as it has the highest positive correlation with happiness score,but also for the developed countries in most of western area with highest GDP, the happiness scores will be higher than the development countries with lower GDP.
   
   In conclusion, GDP is the most influential factors for assessing the happiness scores but the area variable represents a higher correlation with GDP. Thus, Even in very poor countries, GDP comparisons seem to influence the happiness score mostly; however, it may look more likely to happen in rich-country phenomenon [@clark2011will].
   
